User can sign up, log in, sign out, has nickname.  RSpec tests pass (code not written to simply pass the test in a hacky way)

--- a/app/views/shared/_user_signed_in_nav.html.erb
+++ b/app/views/shared/_user_signed_in_nav.html.erb
@@ -1,1 +1,1 @@
-<%= link_to('Sign out', destroy_user_session_path, method: :delete, id: :sign_out) %>
+Welcome, <%= current_user.nickname %> <%= link_to('Sign out', destroy_user_session_path, method: :delete, id: :sign_out) %>
