--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -3,14 +3,19 @@
 <%= form_for(@picture) do |f| %>
 
   <h3> 1. Pick a picture</h3>
-  <%= f.file_field :picture %>
+  <div>
+    <%= f.file_field :picture %>
+    <%= render partial: "shared/error", locals: { model: @picture, field: :picture } %>
+  </div>
   <h3> 2. Describe picture</h3>
   <div><%= f.label :caption %><br />
-    <%= f.text_field :caption %></div>
+    <%= f.text_field :caption %>(Required)<br />
+    <%= render partial: "shared/error", locals: { model: @picture, field: :caption } %>
+  </div>
 
   <div><%= f.label :description %><br />
     <%= f.text_area :description %></div>
 
-  <div><%= f.submit "Upload Pic!" %>, { id: "commit" } %></div>
+  <div><%= f.submit "Upload Pic!" %><% { id: "commit" } %></div>
 <% end %>
 
